Added ray.shutdown() to all notebooks that use ray.init().

--- a/advanced-ray/02-Ray-Actors-Revisited.ipynb
+++ b/advanced-ray/02-Ray-Actors-Revisited.ipynb
@@ -509,7 +509,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.shutdown()  # \"Undo ray.init()\". Terminate all the processes started in this notebook."
+    "ray.shutdown()  # \"Undo ray.init()\"."
    ]
   },
   {
