--- a/ray-crash-course/06-Exploring-Ray-API-Calls.ipynb
+++ b/ray-crash-course/06-Exploring-Ray-API-Calls.ipynb
@@ -294,6 +294,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## ray.shutdown()\n",
+    "\n",
+    "Shutdown this instance of Ray or disconnect from the cluster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.shutdown()  # \"Undo ray.init()\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The next lesson, [Running Ray Clusters](07-Running-Ray-Clusters.ipynb) takes a brief look at the Ray CLI commands for running Ray clusters."
    ]
   }
