--- a/ray-rllib/explore-rllib/01-Application-Cart-Pole.ipynb
+++ b/ray-rllib/explore-rllib/01-Application-Cart-Pole.ipynb
@@ -390,6 +390,15 @@
     "\n",
     "In addition to _Cart Pole_, _Bipedal Walker_, and _Mountain Car_, there are other so-called [\"classic control\"](https://gym.openai.com/envs/#classic_control) examples you can try. Make a copy of this notebook and edit as required."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.shutdown()  # \"Undo ray.init()\"."
+   ]
   }
  ],
  "metadata": {
