--- a/ray-rllib/explore-rllib/solutions/Explore-RLlib-Solutions.ipynb
+++ b/ray-rllib/explore-rllib/solutions/Explore-RLlib-Solutions.ipynb
@@ -497,6 +497,15 @@
    "source": [
     "Try using a larger percentage (you'll have to modify `ShapedChainEnvVisited` directly)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.shutdown()  # \"Undo ray.init()\"."
+   ]
   }
  ],
  "metadata": {
