--- a/ray-rllib/multi-armed-bandits/06-Market-Example.ipynb
+++ b/ray-rllib/multi-armed-bandits/06-Market-Example.ipynb
@@ -677,6 +677,15 @@
    "source": [
     "A final note: when you checkpoint it will change how the training performs in this notebook, if you rerun the training! So be sure to start from scratch when doing experiments here, if that's what you intend!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.shutdown()  # \"Undo ray.init()\"."
+   ]
   }
  ],
  "metadata": {
