--- a/ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb
+++ b/ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb
@@ -1058,6 +1058,15 @@
     "\n",
     "The market that we're modeling doesn't exhibit a linear relationship between the context, inflation in our case, and the rewards. Hence, it's not too surprising that a linear algorithm would fail to model the behavior perfectly. What's interesting here is that Thompson Sampling did a noticeably better job than Upper Confidence Bound."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.shutdown()  # \"Undo ray.init()\"."
+   ]
   }
  ],
  "metadata": {
