--- a/ray-rllib/solutions/Ray-RLlib-Solutions.ipynb
+++ b/ray-rllib/solutions/Ray-RLlib-Solutions.ipynb
@@ -233,6 +233,15 @@
     "\n",
     "Try it again with slightly larger and/or small neural network layers."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.shutdown()  # \"Undo ray.init()\"."
+   ]
   }
  ],
  "metadata": {
