--- a/ray-serve/01-Model-Serving-Challenges.ipynb
+++ b/ray-serve/01-Model-Serving-Challenges.ipynb
@@ -511,6 +511,15 @@
    "source": [
     "The next release of Ray, 0.8.7, will add a `serve.shutdown()` method that makes it easier to clean up."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.shutdown()  # \"Undo ray.init()\"."
+   ]
   }
  ],
  "metadata": {
