--- a/ray-serve/02-Ray-Serve-Example.ipynb
+++ b/ray-serve/02-Ray-Serve-Example.ipynb
@@ -374,6 +374,15 @@
     "\n",
     "# serve.shutdown()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.shutdown()  # \"Undo ray.init()\"."
+   ]
   }
  ],
  "metadata": {
