--- a/ray-tune/01-Understanding-Hyperparameter-Tuning.ipynb
+++ b/ray-tune/01-Understanding-Hyperparameter-Tuning.ipynb
@@ -429,6 +429,15 @@
     "\n",
     "> **Note:** The exercise solution for this tutorial can be found [here](solutions/01-Understanding-Hyperparameter-Tuning-Solutions.ipynb)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.shutdown()  # \"Undo ray.init()\"."
+   ]
   }
  ],
  "metadata": {
