--- a/ray-tune/02-Ray-Tune-with-MNIST.ipynb
+++ b/ray-tune/02-Ray-Tune-with-MNIST.ipynb
@@ -518,6 +518,15 @@
    "source": [
     "The next lesson will explore optimization algorithms that speed up HPO."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.shutdown()  # \"Undo ray.init()\"."
+   ]
   }
  ],
  "metadata": {
