--- a/ray-tune/03-Search-Algos-and-Schedulers.ipynb
+++ b/ray-tune/03-Search-Algos-and-Schedulers.ipynb
@@ -388,6 +388,15 @@
    "source": [
     "The final lesson in this tutorial discusses the new Ray SGD library."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.shutdown()  # \"Undo ray.init()\"."
+   ]
   }
  ],
  "metadata": {
