--- a/ray-tune/04-Ray-SGD.ipynb
+++ b/ray-tune/04-Ray-SGD.ipynb
@@ -142,6 +142,15 @@
     "    print(f'{i:2d}: {stats}')\n",
     "trainer.shutdown()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.shutdown()  # \"Undo ray.init()\"."
+   ]
   }
  ],
  "metadata": {
