--- a/ray-tune/solutions/01-Understanding-Hyperparameter-Tuning-Solutions.ipynb
+++ b/ray-tune/solutions/01-Understanding-Hyperparameter-Tuning-Solutions.ipynb
@@ -187,6 +187,15 @@
     "\n",
     "However, the differences are still relatively small compared to our previous pick of `[40,40]`. If you compare the timestamp values, the training time for `[40,40]` is about 20% slower."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.shutdown()  # \"Undo ray.init()\"."
+   ]
   }
  ],
  "metadata": {
