--- a/ray-tune/solutions/03-Search-Algos-and-Schedulers-Solutions.ipynb
+++ b/ray-tune/solutions/03-Search-Algos-and-Schedulers-Solutions.ipynb
@@ -200,6 +200,15 @@
    "source": [
     "Try changing the experiment to ensure we explore more combinations."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.shutdown()  # \"Undo ray.init()\"."
+   ]
   }
  ],
  "metadata": {
