--- a/advanced-ray/01-Ray-Tasks-Revisited.ipynb
+++ b/advanced-ray/01-Ray-Tasks-Revisited.ipynb
@@ -683,7 +683,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.shutdown()  # \"Undo ray.init()\". Terminate all the processes started in this notebook."
+    "ray.shutdown()  # \"Undo ray.init()\"."
    ]
   },
   {
