--- a/advanced-ray/03-Ray-Internals.ipynb
+++ b/advanced-ray/03-Ray-Internals.ipynb
@@ -504,6 +504,15 @@
     "\n",
     "Actor restarting was also explored in lesson [02: Ray Actors Revisited](02-Ray-Actors-Revisited.ipynb)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.shutdown()  # \"Undo ray.init()\"."
+   ]
   }
  ],
  "metadata": {
