--- a/ray-rllib/multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb
+++ b/ray-rllib/multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb
@@ -333,6 +333,15 @@
     "\n",
     "See the [solutions notebook](solutions/Multi-Armed-Bandits-Solutions.ipynb) for discussion of this and the following exercises."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ray.shutdown()  # \"Undo ray.init()\"."
+   ]
   }
  ],
  "metadata": {
