Refinements to the parallel iterators lesson

--- a/ray-crash-course/05-Ray-Parallel-Iterators.ipynb
+++ b/ray-crash-course/05-Ray-Parallel-Iterators.ipynb
@@ -616,24 +616,34 @@
     "\n",
     "### Exercise 2\n",
     "\n",
-    "The same word may appear with different capitalization, e.g., at the beginning of a sentence. We don't want these occurrences counted separately. Convert all words to lower case. When should this be done?\n",
+    "The same word may appear with different capitalization, e.g., at the beginning of a sentence. We don't want these occurrences counted separately (although this makes less sense when you are scanning source code!). Convert all words to lower case. When in the pipeline should this be done?\n",
     "\n",
     "### Exercise 3\n",
     "\n",
-    "The most frequent \"words\" are actually one-letter, like `n`, which is the most numerous across the notebooks in this directory. Can you figure out why there are so many `n`s? (Hint: try this code in a cell:\n",
-    "\n",
-    "```python\n",
-    "f=open('./01-Ray-Crash-Course-Tasks.ipynb', 'r')\n",
-    "[f.readline() for _ in range(5)]\n",
-    "```\n",
-    "\n",
-    "In natural language processing, these so-called _stop words_ are usually not very useful, so they are filtered out. Add a `filter` step ([documentation](https://docs.ray.io/en/latest/iter.html#ray.util.iter.ParallelIterator.filter)) to remove some set of stop words. Where is the best place to put this step? How would you represent and filter out stop words?\n",
+    "The most frequent \"words\" are actually single letters, like `n`, which is the most numerous across the notebooks in this directory. Can you figure out why there are so many `n`s? Hint: try this code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f=open('./01-Ray-Tasks.ipynb', 'r')\n",
+    "[f.readline() for _ in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In natural language processing, the term _stop words_ is used for \"tokens\" that are not very useful for understanding, so they are filtered out. Add a `filter` step ([documentation](https://docs.ray.io/en/latest/iter.html#ray.util.iter.ParallelIterator.filter)) to remove a set of stop words that you define. Where is the best place to put this step? How would you represent the set of stop words and how would you filter them out?\n",
     "\n",
     "Once the stop words are removed, what are the most common words?\n",
     "\n",
     "### Exercise 4\n",
     "\n",
-    "Try running _word count_ on some of your own files."
+    "Try running _word count_ on some of your own files. Adjust your list of stop words as needed."
    ]
   },
   {
@@ -670,6 +680,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Ray parallel iterators isn't a full-featured replacement for powerful systems like [Apache Spark](https://spark.apache.org), but it handles a lot of scenarios without having to leave Ray.\n",
+    "\n",
     "The next lesson, [Exploring Ray API Calls](06-Exploring-Ray-API-Calls.ipynb) explores the other Ray API calls for more advanced scenarios, including keyword arguments you can pass to the API calls already learned are explored."
    ]
   }
