--- a/ray-crash-course/solutions/Ray-Crash-Course-Solutions.ipynb
+++ b/ray-crash-course/solutions/Ray-Crash-Course-Solutions.ipynb
@@ -566,7 +566,7 @@
    "source": [
     "# 05 Ray Crash Course - Ray Parallel Iterators - Exercises 1-3\n",
     "\n",
-    "Here we combine the solutions for all the exercises. This code is also available as a complete, standalone Ray program in [word-count-exercises.py](word-count-exercises.py)."
+    "Here we combine the solutions for the first three exercises. This code is also available as a complete, standalone Ray program in [word-count-exercises.py](word-count-exercises.py)."
    ]
   },
   {
@@ -601,10 +601,15 @@
     "        return open(f, 'r')\n",
     "\n",
     "# Exercise 3: Remove stop words. Edit this set to taste!\n",
-    "stop_words = {\n",
+    "stop_words1 = {\n",
     "    'that', 'the', 'this', 'an',\n",
     "    'and', 'or', 'but', 'of'\n",
     "}\n",
+    "## All the single digits and ASCII letters:\n",
+    "l=[str(i) for i in range(10)]\n",
+    "l.extend([chr(i) for i in range(ord('a'), ord('z')+1)])\n",
+    "\n",
+    "stop_words = stop_words1.union(set(l))\n",
     "\n",
     "def is_stop_word(word):\n",
     "    \"\"\"\n",
@@ -668,6 +673,40 @@
    "outputs": [],
    "source": [
     "word_counts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 05 Ray Crash Course - Ray Parallel Iterators - Exercise 4\n",
+    "\n",
+    "Now let's run `count_words` on the `README.md` for the tutorial repo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%time word_counts_readme = count_words(['../../README.md'], top_n=100)  # The README is two directories up!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word_counts_readme"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now which words are most prominent?"
    ]
   },
   {
