--- a/ray-crash-course/05-Ray-Parallel-Iterators.ipynb
+++ b/ray-crash-course/05-Ray-Parallel-Iterators.ipynb
@@ -557,7 +557,7 @@
     "    word_count = (\n",
     "        ray.util.iter.from_items(file_list, num_shards=4)\n",
     "           .for_each(lambda f: unzip(f).readlines())\n",
-    "           .flatten()  # converts one record per file will all lines to one record per line.\n",
+    "           .flatten()  # converts one record per file with all lines to one record per line.\n",
     "           .for_each(lambda line: re.split('\\W+', line)) # split into words\n",
     "           .flatten()  # flatten lists of words into one word per record\n",
     "           .for_each(lambda word: (word, 1))\n",
