Fixed bugs in notebook names and references to them.

--- a/ray-crash-course/01-Ray-Tasks.ipynb
+++ b/ray-crash-course/01-Ray-Tasks.ipynb
@@ -608,7 +608,7 @@
    "source": [
     "## ray.get() vs. ray.wait()\n",
     "\n",
-    "Calling `ray.get(ids)` blocks until all the tasks have completed that correspond to the input `ids`. That has been fine for this tutorial so far, but what if you're waiting for a number of tasks, where some will finish more quickly than others? What if you would like to process the completed results as they become available, even while other tasks are still running? That's where `ray.wait()` is recommended. Here we'll provide a brief example. For more details, see the [Ray Core - A Deeper Dive](../ray-core/00-Overview.ipynb) tutorial."
+    "Calling `ray.get(ids)` blocks until all the tasks have completed that correspond to the input `ids`. That has been fine for this tutorial so far, but what if you're waiting for a number of tasks, where some will finish more quickly than others? What if you would like to process the completed results as they become available, even while other tasks are still running? That's where `ray.wait()` is recommended. Here we'll provide a brief example. For more details, see the Advanced Ray, [Ray Tasks Revisited](../advanced-ray/01-Ray-Tasks-Revisited.ipynb) lesson."
    ]
   },
   {
