Added links to previous live events

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -34,6 +34,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Videos of Previous Live Sessions\n",
+    "\n",
+    "To see videos of live sessions covering most of this material, visit the [Anyscale YouTube! channel](https://www.youtube.com/channel/UC7L1tZw52rtgmIB4fr_f40w/playlists) or click the following links for specific sessions:\n",
+    "\n",
+    "* [Ray _Crash Course_](https://youtu.be/2dgIEwkGYGI)\n",
+    "* [Ray RLlib](https://youtu.be/y2KjC7W9nsI)\n",
+    "* [Ray Tune and Ray Serve](https://youtu.be/7-DlqvaPrTE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Getting Help\n",
     "\n",
     "We want to hear your feedback and any issues you encounter!\n",
