Switched how ray.init() is used, now that the Anyscale platform sets RAY_ADDRESS.

--- a/advanced-ray/01-Ray-Tasks-Revisited.ipynb
+++ b/advanced-ray/01-Ray-Tasks-Revisited.ipynb
@@ -27,15 +27,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!../tools/start-ray.sh --check --verbose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import ray, time, os, sys \n",
     "import numpy as np \n",
     "sys.path.append(\"..\")\n",
@@ -48,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.init(address='auto', ignore_reinit_error=True)"
+    "ray.init(ignore_reinit_error=True)"
    ]
   },
   {
