--- a/advanced-ray/solutions/Advanced-Ray-Solutions.ipynb
+++ b/advanced-ray/solutions/Advanced-Ray-Solutions.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,53 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Ray already running or successfully started\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!../../tools/start-ray.sh --check --verbose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2020-05-24 14:32:44,456\tWARNING worker.py:809 -- When connecting to an existing cluster, _internal_config must match the cluster's _internal_config.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'node_ip_address': '192.168.1.149',\n",
-       " 'raylet_ip_address': '192.168.1.149',\n",
-       " 'redis_address': '192.168.1.149:55312',\n",
-       " 'object_store_address': '/tmp/ray/session_2020-05-24_11-24-33_071372_73030/sockets/plasma_store',\n",
-       " 'raylet_socket_name': '/tmp/ray/session_2020-05-24_11-24-33_071372_73030/sockets/raylet',\n",
-       " 'webui_url': 'localhost:8265',\n",
-       " 'session_dir': '/tmp/ray/session_2020-05-24_11-24-33_071372_73030'}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ray.init(address='auto', ignore_reinit_error=True)"
+    "ray.init(ignore_reinit_error=True)"
    ]
   },
   {
@@ -89,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,57 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Returned   2 completed tasks. (elapsed time:  2.017)\n",
-      "0: []\n",
-      "10: [ 4.32737218  1.84041995 -3.65869664 -1.18314247  1.17692894 -6.50627178\n",
-      " -2.56290478 -0.65746464  2.29855075  1.44218294]\n",
-      "Returned   1 completed tasks. (elapsed time:  5.530)\n",
-      "20: [ 1.12572964 -0.1775737  -2.65607606 -2.03323559 -0.90437758  0.25937131\n",
-      " -2.73127879  0.62081916 -2.23769877  0.41473947  2.8628821  -0.29769767\n",
-      "  1.60093991 -2.80766646 -0.24939007  1.91890681 -1.51658634 -1.7927651\n",
-      " -0.48840102 -0.07738982]\n",
-      "Returned   2 completed tasks. (elapsed time:  8.535)\n",
-      "30: [-0.52096067 -0.97949442 -0.76375359 -0.12431216 -0.35839995  0.54821904\n",
-      " -0.36848895  1.32915568 -2.01199297  1.73866514  1.06718706 -4.11578144\n",
-      "  0.46970735 -0.16417912  3.99567667  0.51468331 -0.02258815  3.13481553\n",
-      "  5.07946479 -2.68242857  0.30758541 -0.68127055  0.84779553 -0.7720236\n",
-      " -2.59236206 -2.15657653  1.76079816  0.92234692  0.76478132 -1.30454804]\n",
-      "40: [ 3.39830416  0.21360206 -2.50844728 -2.46589293 -2.79462406 -2.17230112\n",
-      "  0.06005292 -1.3697768   1.41266691 -2.47107171  0.4437492   1.64107474\n",
-      "  0.62407591 -0.15093651  0.04069597  1.17439607 -2.26393226 -0.89548036\n",
-      " -1.05586752  0.46104626  2.13640321  1.9423409   0.57410286  1.37747167\n",
-      " -1.1506983  -3.79712647  0.75408513  2.08915342 -0.61862281  2.76843994\n",
-      " -2.98165049 -4.01724973 -1.01786389 -2.77884406  2.44244499 -2.16552587\n",
-      "  0.52598168  2.03491369 -2.6938132  -0.17236436]\n",
-      "\n",
-      "all arrays: [array([], dtype=float64), array([ 4.32737218,  1.84041995, -3.65869664, -1.18314247,  1.17692894,\n",
-      "       -6.50627178, -2.56290478, -0.65746464,  2.29855075,  1.44218294]), array([ 1.12572964, -0.1775737 , -2.65607606, -2.03323559, -0.90437758,\n",
-      "        0.25937131, -2.73127879,  0.62081916, -2.23769877,  0.41473947,\n",
-      "        2.8628821 , -0.29769767,  1.60093991, -2.80766646, -0.24939007,\n",
-      "        1.91890681, -1.51658634, -1.7927651 , -0.48840102, -0.07738982]), array([-0.52096067, -0.97949442, -0.76375359, -0.12431216, -0.35839995,\n",
-      "        0.54821904, -0.36848895,  1.32915568, -2.01199297,  1.73866514,\n",
-      "        1.06718706, -4.11578144,  0.46970735, -0.16417912,  3.99567667,\n",
-      "        0.51468331, -0.02258815,  3.13481553,  5.07946479, -2.68242857,\n",
-      "        0.30758541, -0.68127055,  0.84779553, -0.7720236 , -2.59236206,\n",
-      "       -2.15657653,  1.76079816,  0.92234692,  0.76478132, -1.30454804]), array([ 3.39830416,  0.21360206, -2.50844728, -2.46589293, -2.79462406,\n",
-      "       -2.17230112,  0.06005292, -1.3697768 ,  1.41266691, -2.47107171,\n",
-      "        0.4437492 ,  1.64107474,  0.62407591, -0.15093651,  0.04069597,\n",
-      "        1.17439607, -2.26393226, -0.89548036, -1.05586752,  0.46104626,\n",
-      "        2.13640321,  1.9423409 ,  0.57410286,  1.37747167, -1.1506983 ,\n",
-      "       -3.79712647,  0.75408513,  2.08915342, -0.61862281,  2.76843994,\n",
-      "       -2.98165049, -4.01724973, -1.01786389, -2.77884406,  2.44244499,\n",
-      "       -2.16552587,  0.52598168,  2.03491369, -2.6938132 , -0.17236436])]\n",
-      "Total time: duration:  8.539 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "start = time.time()\n",
     "array_ids = [make_array.remote(n*10) for n in range(5)]\n",
@@ -247,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,21 +225,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rules_ids:\n",
-      "[Actor(RayConwaysRules, b2e2e8931600)]\n",
-      "game_ids:\n",
-      "[Actor(RayGame, e717d8171600)]\n",
-      "Total time for 1 games (max_steps = 400, batch_size = 1) duration: 15.606 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "time_ray_games(\n",
     "    num_games = 1, \n",
@@ -350,21 +248,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rules_ids:\n",
-      "[Actor(RayConwaysRules, 5e95ba1b1800)]\n",
-      "game_ids:\n",
-      "[Actor(RayGame, 6a5ad72e1800)]\n",
-      "Total time for 1 games (max_steps = 100, batch_size = 1) duration: 15.319 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "time_ray_games(\n",
     "    num_games = 1, \n",
@@ -376,21 +262,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rules_ids:\n",
-      "[Actor(RayConwaysRulesBlocks, f4f7ce371800)]\n",
-      "game_ids:\n",
-      "[Actor(RayGame, d2ae23331800)]\n",
-      "Total time for 1 games (max_steps = 100, batch_size = 1) duration:  8.000 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "time_ray_games(\n",
     "    num_games = 1, \n",
@@ -417,46 +291,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rules_ids:\n",
-      "[Actor(RayConwaysRules, f90511ea1800)]\n",
-      "game_ids:\n",
-      "[Actor(RayGame, 1520a0b51800)]\n",
-      "Total time for 1 games (max_steps = 100, batch_size = 1) duration:  3.901 seconds\n",
-      "CPU times: user 83.7 ms, sys: 35.4 ms, total: 119 ms\n",
-      "Wall time: 3.91 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%time time_ray_games(num_games = 1, max_steps = 100, batch_size = 1, grid_dimensions = (100,100), use_block_updates=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rules_ids:\n",
-      "[Actor(RayConwaysRules, 13cf5f101800)]\n",
-      "game_ids:\n",
-      "[Actor(RayGame, 0d0441cf1800)]\n",
-      "Total time for 1 games (max_steps = 100, batch_size = 50) duration:  3.817 seconds\n",
-      "CPU times: user 59.7 ms, sys: 23.2 ms, total: 82.9 ms\n",
-      "Wall time: 3.82 s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%time time_ray_games(num_games = 1, max_steps = 100, batch_size = 50, grid_dimensions = (100,100), use_block_updates=False)"
    ]
