--- a/ray-crash-course/01-Ray-Tasks.ipynb
+++ b/ray-crash-course/01-Ray-Tasks.ipynb
@@ -147,13 +147,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's start Ray. Although we don't need it immediately, we'll use the Ray Dashboard to watch performance metrics like CPU utilization.\n",
+    "### Let's Start Ray\n",
     "\n",
-    "These tutorials run a Ray cluster in your environment. The following bash shell script will determine if Ray is already running using the CLI command `ray stat`. If not, it will tell you how to start Ray using the CLI command `ray start --head`, which starts the \"head\" node of a Ray cluster.\n",
+    "If you are running these tutorials on your laptop, each notebook will start a mini-cluster when we call `ray.init()` below. They we'll shut it down at the end of the notebook, so be sure to evaluate the last cell in each notebook that calls `ray.shutdown()`.\n",
     "\n",
-    "If you are working on a laptop, this will be the only node in your \"cluster\". If you are working through this material using the Anyscale platform, you'll have a cluster of a 1 or more nodes and Rays should already be running, so you'll just see a message like _Ray already running or successfully started_. \n",
+    "If you are learning on the Anyscale platform, your environment is already running a Ray cluster with one or more nodes. So, when we call `ray.init()`, it will connect to that running cluster. You should still run the `ray.shutdown()` cell at the end of each notebook, but it won't shutdown the whole cluster.\n",
     "\n",
-    "You'll learn more about the `ray` CLI in lesson 4, [Running Ray Clusters](04-Running-Ray-Clusters.ipynb). See also [this documentation](https://docs.ray.io/en/latest/starting-ray.html#using-ray-on-a-cluster)."
+    "For more details on the options you can pass to `ray.init()`, see lesson 6, [Exploring Ray API Calls](06-Exploring-Ray-API-Calls.ipynb). \n",
+    "If you are interested in the details of running a Ray cluster using the `ray` CLI, see lesson 7, [Running Ray Clusters](07-Running-Ray-Clusters.ipynb) and see also the corresponding [Ray documentation](https://docs.ray.io/en/latest/starting-ray.html#using-ray-on-a-cluster). There is also a script `tools/start-ray.sh` that can you play with. (It was used in an earlier version of these tutorials.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `ignore_reinit_error=True` argument tells Ray not to complain if we rerun the cell; Ray will just ignore the request to initialize."
    ]
   },
   {
@@ -162,33 +170,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!../tools/start-ray.sh  --check --verbose"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you are working on your laptop, make sure to run `ray stop` in a terminal window when you have finished for the day. If you are running on the Anyscale platform, this step is not necessary."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we'll initialize Ray in this notebook process and connect to the cluster. The two keyword arguments passed do the following:\n",
-    "\n",
-    "* `address='auto'`: Automatically detect the cluster head node address by connecting to the local Ray processes on this machine.\n",
-    "* `ignore_reinit_error=True`: Tells Ray not to complain if we rerun the cell. Note that Ray won't reestablish the connection; it will just ignore the request to initialize."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ray.init(address='auto', ignore_reinit_error=True)"
+    "ray.init(ignore_reinit_error=True)"
    ]
   },
   {
@@ -202,6 +184,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Although we don't need it immediately, we'll use the Ray Dashboard to watch performance metrics like CPU utilization.\n",
+    "\n",
     "The next cell prints the URL for the Ray Dashboard. **This is only correct if you are running this tutorial on a laptop.** Click the link to open the dashboard.\n",
     "\n",
     "If you are running on the Anyscale platform, use the URL provided by your instructor to open the Dashboard."
