--- a/ray-crash-course/02-Ray-Actors.ipynb
+++ b/ray-crash-course/02-Ray-Actors.ipynb
@@ -452,7 +452,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's explore improving the performance with Ray. First, we'll make sure the Ray cluster is running, as we did in the previous lesson. If you didn't stop Ray with `ray stop`, you should just see the output, _Ray already running or successfully started_."
+    "## Improving Performance with Ray. \n",
+    "\n",
+    "Let's start Ray as before in the [first lesson](01-Ray-Tasks.ipynb)."
    ]
   },
   {
@@ -461,30 +463,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!../tools/start-ray.sh --check --verbose"
+    "ray.init(ignore_reinit_error=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now connect to the cluster:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ray.init(address='auto', ignore_reinit_error=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Running on your laptop? Click the output of the next cell to open the Ray Dashboard, if you don't already have it open from the previous lesson. \n",
+    "Running on your laptop? Click the output of the next cell to open the Ray Dashboard.\n",
     "\n",
     "If you are running on the Anyscale platform, use the dashboard URL provided to you."
    ]
