--- a/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
+++ b/ray-rllib/01-Introduction-to-Reinforcement-Learning.ipynb
@@ -537,27 +537,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following script checks if the Ray cluster is already running. If not, it tells you what to do to start Ray."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!../tools/start-ray.sh --check --verbose"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "tQFzEX2BNlh3"
-   },
-   "source": [
-    "Now start Ray in this \"driver\" process. This must be done before we instantiate any RL agents."
+    "Initialize Ray. If you are running these tutorials on your laptop, then a single-node Ray cluster will be started by the next cell. If you are running in the Anyscale platform, it will connect to the running Ray cluster."
    ]
   },
   {
@@ -570,7 +550,7 @@
    },
    "outputs": [],
    "source": [
-    "ray.init(address='auto', ignore_reinit_error=True, log_to_driver=False)"
+    "ray.init(ignore_reinit_error=True, log_to_driver=False)"
    ]
   },
   {
