--- a/ray-rllib/multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb
+++ b/ray-rllib/multi-armed-bandits/03-Simple-Multi-Armed-Bandit.ipynb
@@ -149,9 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now use Tune to train the policy for this bandit. But first, we want to make sure that Ray is running and we want to initialize Ray in this \"driver\" program explicitly. \n",
-    "\n",
-    "The following shell command will probably print _INFO: Ray is already running._ If not, follow the instructions it prints to start Ray."
+    "Now use Tune to train the policy for this bandit. But first, we want to start Ray on your laptop or connect to the running Ray cluster if you are working on the Anyscale platform."
    ]
   },
   {
@@ -160,23 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!../../tools/start-ray.sh --check --verbose"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now initialize Ray in this \"driver\" program (notebook)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ray.init(address='auto', ignore_reinit_error=True)"
+    "ray.init(ignore_reinit_error=True)"
    ]
   },
   {
