--- a/ray-tune/solutions/03-Search-Algos-and-Schedulers-Solutions.ipynb
+++ b/ray-tune/solutions/03-Search-Algos-and-Schedulers-Solutions.ipynb
@@ -36,16 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!../../tools/start-ray.sh --check --verbose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ray.init(address='auto', ignore_reinit_error=True)"
+    "ray.init(ignore_reinit_error=True)"
    ]
   },
   {
