--- a/advanced-ray/02-Ray-Actors-Revisited.ipynb
+++ b/advanced-ray/02-Ray-Actors-Revisited.ipynb
@@ -25,15 +25,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!../tools/start-ray.sh --check --verbose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import ray, time, sys, os \n",
     "import numpy as np \n",
     "sys.path.append(\"..\")\n",
@@ -46,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.init(address='auto', ignore_reinit_error=True)"
+    "ray.init(ignore_reinit_error=True)"
    ]
   },
   {
