--- a/ray-crash-course/06-Exploring-Ray-API-Calls.ipynb
+++ b/ray-crash-course/06-Exploring-Ray-API-Calls.ipynb
@@ -21,15 +21,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!../tools/start-ray.sh --check --verbose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import ray, time, sys \n",
     "import numpy as np \n",
     "sys.path.append(\"..\")\n",
@@ -42,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.init(address='auto', ignore_reinit_error=True)"
+    "ray.init(ignore_reinit_error=True)"
    ]
   },
   {
