--- a/ray-crash-course/07-Running-Ray-Clusters.ipynb
+++ b/ray-crash-course/07-Running-Ray-Clusters.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
     "\n",
-    "We used the `../tools/start-ray.sh` script to check if a Ray \"cluster\" is running and start it if needed, such as when you go through these lessons using the Anyscale hosted platform. This script uses the Ray CLI command `ray` to perform these tasks. \n",
+    "In the previous lessons, we let `ray.init()` start a mini-cluster on your laptop or connect to the running Ray cluster in the Anyscale hosted platform. This lesson shows you how to use the Ray CLI command `ray` to create and manage Ray clusters. \n",
     "\n",
     "Let's briefly explore a few of the Ray CLI subcommands. For the full documentation, see the ray documentation for the [Ray CLI](https://docs.ray.io/en/latest/package-ref.html#the-ray-command-line-api). See also the [Cluster Setup](https://docs.ray.io/en/latest/cluster-index.html) section.\n",
     "\n",
