--- a/ray-rllib/multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb
+++ b/ray-rllib/multi-armed-bandits/04-Linear-Upper-Confidence-Bound.ipynb
@@ -160,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now let's use [Ray Tune](http://tune.io) to train. First we'll ensure that Ray is properly initialized"
+    "Now let's use [Ray Tune](http://tune.io) to train. First start Ray or connect to a running cluster."
    ]
   },
   {
@@ -169,16 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!../../tools/start-ray.sh --check --verbose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ray.init(address='auto', ignore_reinit_error=True)"
+    "ray.init(ignore_reinit_error=True)"
    ]
   },
   {
