--- a/ray-rllib/solutions/Ray-RLlib-Solutions.ipynb
+++ b/ray-rllib/solutions/Ray-RLlib-Solutions.ipynb
@@ -118,16 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!../../tools/start-ray.sh --check --verbose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ray.init(address='auto', ignore_reinit_error=True, log_to_driver=False)"
+    "ray.init(ignore_reinit_error=True, log_to_driver=False)"
    ]
   },
   {
