--- a/ray-serve/01-Model-Serving-Challenges.ipynb
+++ b/ray-serve/01-Model-Serving-Challenges.ipynb
@@ -91,15 +91,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!../tools/start-ray.sh --check --verbose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import ray\n",
     "from ray import serve\n",
     "\n",
@@ -114,7 +105,7 @@
    },
    "outputs": [],
    "source": [
-    "ray.init(address='auto', ignore_reinit_error=True)"
+    "ray.init(ignore_reinit_error=True)"
    ]
   },
   {
