--- a/ray-serve/02-Ray-Serve-Example.ipynb
+++ b/ray-serve/02-Ray-Serve-Example.ipynb
@@ -28,15 +28,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!../tools/start-ray.sh --check --verbose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import ray\n",
     "from ray import serve\n",
     "import os\n",
@@ -49,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.init(address='auto', ignore_reinit_error=True)"
+    "ray.init(ignore_reinit_error=True)"
    ]
   },
   {
