--- a/ray-tune/01-Understanding-Hyperparameter-Tuning.ipynb
+++ b/ray-tune/01-Understanding-Hyperparameter-Tuning.ipynb
@@ -123,22 +123,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following shell command will probably print _INFO: Ray is already running._ If not, follow the instructions it prints to start Ray."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!../tools/start-ray.sh --check --verbose"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Now we start Ray in this \"driver\" program (notebook)."
    ]
   },
@@ -148,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.init(address='auto', ignore_reinit_error=True)"
+    "ray.init(ignore_reinit_error=True)"
    ]
   },
   {
