--- a/ray-tune/03-Search-Algos-and-Schedulers.ipynb
+++ b/ray-tune/03-Search-Algos-and-Schedulers.ipynb
@@ -114,15 +114,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!../tools/start-ray.sh --check --verbose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import ray\n",
     "from ray import tune"
    ]
@@ -133,7 +124,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.init(address='auto', ignore_reinit_error=True)"
+    "ray.init(ignore_reinit_error=True)"
    ]
   },
   {
