--- a/ray-tune/04-Ray-SGD.ipynb
+++ b/ray-tune/04-Ray-SGD.ipynb
@@ -45,15 +45,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!../tools/start-ray.sh --check --verbose"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import ray\n",
     "from ray.util.sgd import TorchTrainer\n",
     "from ray.util.sgd.torch.examples.train_example import LinearDataset\n",
@@ -68,7 +59,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ray.init(address='auto', ignore_reinit_error=True)"
+    "ray.init(ignore_reinit_error=True)"
    ]
   },
   {
