Added anchors to the Ray Summit images.

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -25,9 +25,11 @@
     "\n",
     "Join us for the [_free_ Ray Summit 2020 virtual conference](https://events.linuxfoundation.org/ray-summit/?utm_source=dean&utm_medium=embed&utm_campaign=ray_summit&utm_content=anyscale_academy), September 30 - October 1, 2020. We have an amazing lineup of luminar keynote speakers and breakout sessions on the Ray ecosystem, third-party Ray libraries, and applications of Ray in the real world.\n",
     "\n",
-    "![Ray Summit 2020](images/raysummit-horizontal-white-banner-full.png)\n",
+    "<a href=\"https://events.linuxfoundation.org/ray-summit/?utm_source=dean&utm_medium=embed&utm_campaign=ray_summit&utm_content=anyscale_academy\">\n",
+    "<img src=\"images/raysummit-horizontal-white-banner-full.png\" alt=\"Ray Summit 2020\"/>\n",
+    "</a>\n",
     "\n",
-    "We have a schedule of other online events, too: [anyscale.com/events](https://anyscale.com/events)."
+    "For information about other online events, see [anyscale.com/events](https://anyscale.com/events)."
    ]
   },
   {
@@ -36,11 +38,7 @@
    "source": [
     "## Videos of Previous Live Sessions\n",
     "\n",
-    "To see videos of live sessions covering most of this material, visit the [Anyscale YouTube! channel](https://www.youtube.com/channel/UC7L1tZw52rtgmIB4fr_f40w/playlists) or click the following links for specific sessions:\n",
-    "\n",
-    "* [Ray _Crash Course_](https://youtu.be/2dgIEwkGYGI)\n",
-    "* [Ray RLlib](https://youtu.be/y2KjC7W9nsI)\n",
-    "* [Ray Tune and Ray Serve](https://youtu.be/7-DlqvaPrTE)"
+    "To see videos of live sessions covering most of this material, visit the [Anyscale Academy](https://anyscale.com/academy) home page or the [Anyscale YouTube! channel](https://www.youtube.com/channel/UC7L1tZw52rtgmIB4fr_f40w/playlists)."
    ]
   },
   {
