--- a/reference/Troubleshooting-Tips-Tricks.ipynb
+++ b/reference/Troubleshooting-Tips-Tricks.ipynb
@@ -8,13 +8,22 @@
     "\n",
     "© 2019-2020, Anyscale. All Rights Reserved\n",
     "\n",
-    "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)\n",
-    "\n",
+    "![Anyscale Academy](../images/AnyscaleAcademy_Logo_clearbanner_141x100.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Join Us at Ray Summit 2020!\n",
     "\n",
     "Join us for the [_free_ Ray Summit 2020 virtual conference](https://events.linuxfoundation.org/ray-summit/?utm_source=dean&utm_medium=embed&utm_campaign=ray_summit&utm_content=anyscale_academy), September 30 - October 1, 2020. We have an amazing lineup of luminar keynote speakers and breakout sessions on the Ray ecosystem, third-party Ray libraries, and applications of Ray in the real world.\n",
     "\n",
-    "![Ray Summit 2020](../images/raysummit-horizontal-white-banner-full.png)"
+    "<a href=\"https://events.linuxfoundation.org/ray-summit/?utm_source=dean&utm_medium=embed&utm_campaign=ray_summit&utm_content=anyscale_academy\">\n",
+    "<img src=\"../images/raysummit-horizontal-white-banner-full.png\" alt=\"Ray Summit 2020\"/>\n",
+    "</a>\n",
+    "\n",
+    "For information about other online events, see [anyscale.com/events](https://anyscale.com/events)."
    ]
   },
   {
@@ -69,15 +78,7 @@
     "\n",
     "It probably means you are running a VPN on your machine. [At this time](https://github.com/ray-project/ray/issues/6573), you can't use `ray.init()` with a VPN running. You'll have to stop your VPN to run `ray.init()`, then once it finishes, you can restart your VPN.\n",
     "\n",
-    "Suppose you successfully executed `!../tools/start-ray.sh` in a notebook, but then when you run `ray.init(adress='auto', ...)` you get the following error for some `IP` address and `PORT`:\n",
-    "\n",
-    "``` \n",
-    "ConnectionError: Error 61 connecting to IP:PORT. Connection refused.\n",
-    "```\n",
-    "\n",
-    "If the output of `../tools/start-ray.sh` includes instructions for passing a Redis password, e.g., `redis_password='5241590000000000'`, add this argument to the `ray.init()` call and try again. \n",
-    "\n",
-    "If that fails, it may be necessary to kill any old Redis processes that are running. On MacOS and Linux systems, use a terminal window and run the following command, shown with example output:\n",
+    "If `ray.init()` still fails, it may be that old Redis processes are somehow still running. On MacOS and Linux systems, use a terminal window and run the following command, shown with example output:\n",
     "\n",
     "```shell\n",
     "$ ps -ef | grep redis\n",
